Added single weather attribute card item

--- a/feature/weather/ui/src/main/res/values-ar/strings.xml
+++ b/feature/weather/ui/src/main/res/values-ar/strings.xml
@@ -5,4 +5,31 @@
     <string name="saved_cities">favorites</string>
     <string name="settings">Settings</string>
     <string name="next_7_days">Next 7 Days</string>
+    <string name="uv_index">UV INDEX</string>
+    <string name="feels_like">FEELS LIKE</string>
+    <string name="pressure">PRESSURE</string>
+    <string name="sun_rise">SUNRISE</string>
+    <string name="precipitation">PRECIPITATION</string>
+    <string name="wind">WIND</string>
+    <string name="moon">MOON</string>
+    <string name="in_last_24hr">In last 24Hr</string>
+    <string name="no_rain_expected">No rain expected</string>
+    <string name="no_need_to_use_sun_protection">No need to use sun protection</string>
+    <string name="use_sun_protection_between_9am_2pm">Use sun protection between 9am - 2pm</string>
+    <string name="use_sun_protection_between_9am_3pm">Use sun protection between 9am - 3pm</string>
+    <string name="use_sun_protection_between_9am_4pm">Use sun protection between 9am - 4pm</string>
+    <string name="avoid_direct_sunlight_interaction">Avoid direct sunlight interaction</string>
+    <string name="use_sun_protection_to_be_safe">Use sun protection to be safe</string>
+    <string name="low">Low</string>
+    <string name="moderate">Moderate</string>
+    <string name="high">High</string>
+    <string name="very_high">Very high</string>
+    <string name="extreme">Extreme</string>
+    <string name="similar_to_the_actual_temperature">Similar to the actual temperature</string>
+    <string name="wind_is_making_it_cooler">Wind is making it cooler</string>
+    <string name="humidity_is_making_it_warmer">Humidity is making it warmer</string>
+    <string name="expected_mm_rain_on">Expected %1$s mm rain on %2$s</string>
+    <string name="sunset">Sunset</string>
+    <string name="gust">Gust</string>
+    <string name="km_h">KM/H</string>
 </resources>
