Added DatabaseModule with room database support
Fixed minor ui bugs

--- a/feature/weather/ui/src/main/res/values-ar/strings.xml
+++ b/feature/weather/ui/src/main/res/values-ar/strings.xml
@@ -34,4 +34,7 @@
     <string name="gust">Gust</string>
     <string name="km_h">KM/H</string>
     <string name="today">Today</string>
+    <string name="chances_of_rain">Chances of rain %1$s\%%</string>
+    <string name="uv_index_s">UV index %1$s</string>
+    <string name="forecasted_days">Forecasted days</string>
 </resources>
