--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Smart Weather</string>
+
+    <string name="saved_cities">favorites</string>
+    <string name="settings">Settings</string>
 </resources>
